--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "platformsh-config": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
